# pyvolutionary

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  pyproject.toml
demos/: __init__.py  aco.py  alo.py  ao.py  archo.py  avo.py  bbo.py  bco.py  bfo.py  bgbo.py  bo.py  bro.py  bso.py  ccoa.py  cdo.py  cgo.py  chio.py  co.py  coatio.py  cro.py  cso.py  csoa.py  dmo.py  do.py  efo.py  eho.py  eso.py  evo.py  ewo.py  fbio.py  fho.py  flao.py  fo.py  foa.py  fpao.py  fso.py  fsso.py  fwa.py  gao.py  gco.py  (+46 more)
demos/functions/: ackley.py  elliptic.py  griewank.py  michalewicz.py  rastrigin.py  rosenbrock.py  sphere.py  weierstrass.py  zakharov.py
demos/utils/: utils.py
examples/: __init__.py  employee_rostering_problem.py  gridsearchcv.py  healthcare_wokflow_optimization_problem.py  hypertuner.py  job_shop_scheduling_problem.py  location_optimization_problem.py  maintenance_scheduling_problem.py  multitask.py  production_optimization_problem.py  shortest_path_problem.py  supply_chain.py  supply_chain_problem.py
pyvolutionary/: __init__.py  abstract.py  classes.py  enums.py  gridsearchcv.py  helpers.py  hypertuner.py  models.py  multitask.py  utils.py
pyvolutionary/african_vulture/: __init__.py  african_vulture_optimization.py  models.py
pyvolutionary/ant_colony/: __init__.py  ant_colony_optimization.py  models.py
pyvolutionary/ant_lion/: __init__.py  ant_lion_optimization.py  models.py
pyvolutionary/aquila/: __init__.py  aquila_optimization.py  models.py
pyvolutionary/archimede/: __init__.py  archimede_optimization.py  models.py
pyvolutionary/bacterial_foraging/: __init__.py  bacterial_foraging_optimization.py  models.py
pyvolutionary/bat/: __init__.py  bat_optimization.py  models.py
pyvolutionary/battle_royale/: __init__.py  battle_royale_optimization.py  models.py
pyvolutionary/bee_colony/: __init__.py  bee_colony_optimization.py  models.py
pyvolutionary/biogeography_based/: __init__.py  biogeography_based_optimization.py  models.py
pyvolutionary/brain_storm/: __init__.py  brain_storm_optimization.py  improved_brain_storm_optimization.py  models.py
pyvolutionary/brown_bear/: __init__.py  brown_bear_optimization.py  models.py
pyvolutionary/camel_caravan/: __init__.py  camel_caravan_optimization.py  models.py
pyvolutionary/cat_swarm/: __init__.py  cat_swarm_optimization.py  models.py
pyvolutionary/chaos_game/: __init__.py  chaos_game_optimization.py  models.py
pyvolutionary/chernobyl_disaster/: __init__.py  chernobyl_disaster_optimization.py  models.py
pyvolutionary/coati/: __init__.py  coati_optimization.py  models.py
pyvolutionary/coral_reef/: __init__.py  coral_reef_optimization.py  models.py
pyvolutionary/coronavirus_herd_immunity/: __init__.py  coronavirus_herd_immunity_optimization.py  models.py
pyvolutionary/coyotes/: __init__.py  coyotes_optimization.py  models.py
pyvolutionary/dragonfly/: models.py  (+2 more)
tests/: fixtures.py  test_combinatorial_problem.py  test_constrained_problem.py  test_continuous_multivariable_optimization.py  test_early_stopping.py  test_gridsearchcv.py  test_hypertuner.py  test_multiobjective_problem.py  test_no_configuration.py  test_task_bounds.py  test_utils.py
(+385 files in other folders)
