[tool.poetry]
name = "pyVolutionary"
version = "1.1.0"
description = "pyVolutionary is a package collecting metaheuristic algorithms, available for free usage and able to solve a wide range of optimization problems."
authors = ["Matteo Cacciola <matteo.cacciola@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/matteocacciola/fastapi_healthz"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = "^2.4.2"
numpy = "^1.26.1"
install = "^1.3.5"
coverage = "^7.3.2"
matplotlib = "^3.8.1"
sphynx = "^0.0.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
requests-mock = "^1.11.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pylint = "^3.0.2"
wrapt = "^1.16.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
myst-parser = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
