[tool.poetry]
name = "pyVolutionary"
version = "2.6.4"
description = "pyVolutionary is a package collecting metaheuristic algorithms, available for free usage and able to solve a wide range of optimization problems."
authors = ["Matteo Cacciola <matteo.cacciola@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/matteocacciola/pyvolutionary"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]


[tool.poetry.dependencies]
python = ">=3.10"
pydantic = "^2.9.0"
numpy = "^2.1.1"
pandas = "^2.2.0"
scipy = "^1.12.0"


[tool.poetry.group.test.dependencies]
coverage = "^7.3.2"
pytest = "^7.4.3"
requests-mock = "^1.11.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pylint = "^3.0.2"
wrapt = "^1.16.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
myst-parser = "^2.0.0"


[tool.poetry.group.demo.dependencies]
matplotlib = "^3.7.5"


[tool.poetry.group.examples.dependencies]
opfunu = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
